test/fail_compilation/fail10055c.d
struct S {
    ~this() { }
}

struct SX {
    S s;
    @safe ~this() { }
}


void main() { }
